--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
 		<link rel="canonical" href="https://my.ibvpn.com/aff.php?aff=8691">
 		<link rel="canonical" href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter?~ref=https://gisticon.github.io/pret.git/_=_">
 ">
-	var socket = new WebSocket('ws://game.example.com:12010/updates');
-socket.onopen = function () {
-  setInterval(function() {
-    if (socket.bufferedAmount == 0)
-      socket.send(getUpdateData());
-  }, 50);
-};	
+ 	
 	</index>
 
 	<head>
@@ -282,7 +276,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		<title>War Commander</title>
 		<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default">
 		<link rel="import" stylesheet"text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css">
-		<link rel="private" href="https://gisticon.github.io/startbootstrap-sb-admin-2/login.html">
+		<link rel="private" href="pret/server./server.psm1 ">
 		<link rel="manifest" href="/manifest.json">
 	<head id="Head">
 		<meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864">
@@ -371,7 +365,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		<script type="text/javascript">
 			(function() {
 		                if (!isOptanonGroupActive("2")) return;
-						var script = '//s1325.t.eloqua.com/visitor/v200/svrGP?pps=70&siteid=1325';
+						var script = 'pret/Config/0591E6CE - 953D2E12 - 2AE7D107 - 5B805B75 ';
 						(function getScript(source, callback) {
 							var script = document.createElement('script');
 							var prior = document.getElementsByTagName('script')[0];
@@ -450,7 +444,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		    }
 		})();
 		</script>
-		<link href="/Telerik.Web.UI.WebResource.axd?d=Fwpnh9ive5PG4kWt6XVIYJG6459c1jKhUm3AcHWvEvuMjmDtt0nQYpp556-bPLfosAWRWfIWO8imzqXaWgkgLhScpGrB32P8mSQO5DSQGgf-9Z5ns8Zg_Jd4IXBUoeFvYHpaPQ2&amp;t=635187572960000000&amp;compress=0&amp;_TSM_CombinedScripts_=%3b%3bTelerik.Sitefinity.Resources%2c+Version%3d10.1.6522.0%2c+Culture%3dneutral%2c+PublicKeyToken%3db28c218413bdf563%3aen%3a6295bdcc-20e8-4b93-87f4-49d008d23c7b%3a7a90d6a" type="text/css" rel="stylesheet">
+		<link href="pret/Config/0591E6CE - 953D2E12 - 2AE7D107 - 5B805B75 " type="text/css" rel="stylesheet">
 		<style type="text/css" media="all">
 			html body .tlrk {
 			  line-height: 1.25;
@@ -517,7 +511,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
       xfbml      : true,
       version    : '{api-version}'
     });
-var socket = new WebSocket('ws://game.example.com:12010/updates');
+var socket = new WebSocket('ws: //pret/Config/0591E6CE - 953D2E12 - 2AE7D107 - 5B805B75 ');
 socket.onopen = function () {
   setInterval(function() {
     if (socket.bufferedAmount == 0)
