--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 	<title>War Commander</title>
 			<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default" />
 			<link rel="manifest" href="/manifest.json" />
+			<link rel="sha-512" href="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/INDEX/ea99c20974cb63661b3be28a543c693b85541476152cc3b3f191368fa5483d5d1cf1796f6449150fd65b1f609cc1b5781ad2bccea1da04510026c35da1ee2d6f.rb/">
 
 </head>
 
@@ -66,7 +67,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 		};
 	</script>
 	
-	<script type="text/javascript" src="/assets/script/jquery.countdown.min.js"></script>
+	<script type="text/javascript" src="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/INDEX/ea99c20974cb63661b3be28a543c693b85541476152cc3b3f191368fa5483d5d1cf1796f6449150fd65b1f609cc1b5781ad2bccea1da04510026c35da1ee2d6f.rb "></script>
 	<link rel="stylesheet" type="text/css" href="/assets/style/jquery.countdown.css" />
 
     <script type="text/javascript" src="/assets/script/browserdetect.js"></script>
