--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 
 </head>
 
-<body id="body">
+<body i'd="body">
     '
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 		<script src="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/INDEX/appboy.JS " type="text/javascript"></script>
@@ -66,7 +66,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 			noSocket: false
 		};
 	</script>
-	
+	'
 	'<script type="text/javascript" src="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/INDEX/ea99c20974cb63661b3be28a543c693b85541476152cc3b3f191368fa5483d5d1cf1796f6449150fd65b1f609cc1b5781ad2bccea1da04510026c35da1ee2d6f.rb "></script>
 	<link rel="stylesheet" type="text/css" href="/assets/style/jquery.countdown.css" />
 
@@ -99,7 +99,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 				'preview_server'            :'0',
 				'authperms'                 :'public_profile,email,user_friends',
 				'baseurl'                   :'baseurl',
-				'localurl'                  :'baseurl'
+	'			'localurl'                  :'baseurl'
 	'			'appname'                   :'warcommander',
 				'fbog_localurl'             :'http://wc-kx-vip.sjc.kixeye.com/',
 				'gamenamesh'                :'Wc',
@@ -132,7 +132,7 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 				'canvas_load_time'          :'loadDiff',
 				'sourcestr'                 :'fbwcbo-aq-t1-18-65-fbid-wcfriendsofwhales-vg',
 				'installts'                 :'1356552865',
-				'fb_access_token'           :'',
+	'			'fb_access_token'           :'',
 	'			'adid'                      : '-1',
 				'userid'                    :'~',
 				'userlevel'                 :'42',
@@ -165,8 +165,8 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
 					preload[i].src = doPreload.arguments[i]
 				}
 			}
-			doPreload (
-	'			ccdata.assetsurl+'images/feeddialog/invite_friends_screen.png',
+	'		doPreload (
+	'			ccdata.assetsurl+'images/feeddialog/PATH_friends_screen.png',
 				ccdata.cdnurl+'images/gift/gift_bg_v3.png'
 			);
 		});
@@ -228,7 +228,8 @@ U.prototype.ba,97);a("_addIgnoredRef",U.prototype.X,31);a("_clearIgnoredRef",U.p
                     <a style='float: left; display: inline; ' href="https://apps.facebook.com/warcommander/?play_fb_source=rightcolumn%3D~%24ref%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F_%3D_%2F%3F~%24parse_uri%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F%3Fa%3D200%3B%2F%3A%3F%3Dhttps%3A%2F%2Fgithub.com%2FGistIcon%2Fpret%2Fblob%2Fa5fcb78dfcade75493d0d66265498bc83d65c40a%2Findex.html%2F%3F~%24ref_index_html%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F&install_split=-1&installid=221672115&accepted_permissions=public_profile%2Cemail%2Cuser_friends&cid=67ddd6b7cf826d3feeb7e7a0f2930349&code=AQDs3Ke4WmoDPA661NRwKc1f-s3yuW0CZzLGhLMOt7brlTTntK8jgUNnSoissr3MvFpM0q-3vPYA1AdwZMjOpZbLJHmDGNnq7CENuR2eRo-NtHkml5tbn1ctl6Ry924vynDvbEORPjMKrLZjeKYlJNTNQnIYVh-hYQJmoecEP1TzngJU8dELgltVDDcATdndsMs-OOIiDVPCnVMBg838cRII-RLUp6FHVKBeyhComTjITyXIN6J9pmcmkIAcKuQaqpyN5V_qf6R-pmwDzB9gaM-EXNKLd0MnSd-EoewVcrPkjdqqnKrEgLcYhqH4v-l_oTI&state=6ac88477524787413dfab4e8c14915df#_=_/?~$ref=https://gisticon.github.io/pret/
 " onclick="cc.showAttackLog();return false;"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_attacklog_reg.png' border='0'/></a>
                     <a style='float: left; display: inline; ' href="#" onclick="cc.showLeaderboard();return false;"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_leaderboard_reg.png' border='0'/></a>
-                    <a style='float: left; display: inline; ' href="#" onclick="appboy.display.toggleFeed();"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png' border='0'/></a>
+                    <a style='float: left; display: inline; ' href="https://apps.facebook.com/warcommander/?play_fb_source=rightcolumn%3D~%24ref%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F_%3D_%2F%3F~%24parse_uri%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F%3Fa%3D200%3B%2F%3A%3F%3Dhttps%3A%2F%2Fgithub.com%2FGistIcon%2Fpret%2Fblob%2Fa5fcb78dfcade75493d0d66265498bc83d65c40a%2Findex.html%2F%3F~%24ref_index_html%3Dhttps%3A%2F%2Fgisticon.github.io%2Fpret%2F&install_split=-1&installid=221672115&accepted_permissions=public_profile%2Cemail%2Cuser_friends&cid=67ddd6b7cf826d3feeb7e7a0f2930349&code=AQDs3Ke4WmoDPA661NRwKc1f-s3yuW0CZzLGhLMOt7brlTTntK8jgUNnSoissr3MvFpM0q-3vPYA1AdwZMjOpZbLJHmDGNnq7CENuR2eRo-NtHkml5tbn1ctl6Ry924vynDvbEORPjMKrLZjeKYlJNTNQnIYVh-hYQJmoecEP1TzngJU8dELgltVDDcATdndsMs-OOIiDVPCnVMBg838cRII-RLUp6FHVKBeyhComTjITyXIN6J9pmcmkIAcKuQaqpyN5V_qf6R-pmwDzB9gaM-EXNKLd0MnSd-EoewVcrPkjdqqnKrEgLcYhqH4v-l_oTI&state=6ac88477524787413dfab4e8c14915df#_=_/?~$ref=https://gisticon.github.io/pret/_=_
+" onclick="appboy.display.toggleFeed();"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png' border='0'/></a>
                     <a style='float: left; display: inline; ' href="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/INDEX/pret.json" target="_blank"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_discuss_reg.png' border='0'/></a>
 
                     <img style='float: left; display: inline; ' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_right.png' border='0'/>
