--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">	
 	</License>
 	<index Html>
-		
+<div style="width:1px;height:1px;text-indent:-10000px;overflow:hidden;">
+	<script>
+	kxLogger.logGeneric({
+		'tag': 'load',
+		'stage':'iframeload'
+	});
+</script>
 <DIV id=wrapper><DIV id=header style="POSITION: relative; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; PADDING-LEFT: 10px; PADDING-RIGHT: 10px"><IMG id='logo"' src="/watchdog/resources/css/images/logo-truste.gif"> <LABEL id=heading>TRUSTe Feedback and Resolution System</LABEL> </DIV>
 <DIV id=content>
 <FORM id=watchdog-form method=post action=submit>
@@ -846,7 +852,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		<meta name="description" content="Adaptive UI controls for building multi-device Windows 10  apps with a single code base. Complex and niche UWP controls for creating next gen LoB applications.
 ">
 <!-- End Facebook pixel code -->
-</DIV></DIV>	
+	</DIV></DIV></div>
 	</head>
 
 	<body id="body">
