--- a/index.html
+++ b/index.html
@@ -8,6 +8,119 @@
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">	
 	</License>
 	<index Html>
+		<!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<html class="no-js azure-header-static hasSidebar hasPageActions hasBreadcrumb landingpage" lang="en-us" dir="ltr" data-authenticated="false" data-target="docs" x-ms-format-detection="none">
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta property="og:title" content="Azure Windows Virtual Machines Documentation - Tutorials, API Reference" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://docs.microsoft.com/en-us/azure/virtual-machines/windows/" />
+
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@docsmsft" />
+
+		<meta name="document_id" content="1d98d530-28c7-635f-d41b-8da3ae02970c" />
+<meta name="meta.description" content="Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud." />
+<meta name="services" content="virtual-machines\windows" />
+<meta name="author" content="czeumault" />
+<meta name="manager" content="carolz" />
+<meta name="ms.service" content="virtual-machines-windows" />
+<meta name="ms.tgt_pltfrm" content="na" />
+<meta name="ms.devlang" content="na" />
+<meta name="ms.topic" content="landing-page" />
+<meta name="ms.date" content="01/23/2017" />
+<meta name="ms.author" content="carolz" />
+<meta name="breadcrumb_path" content="/azure/bread/toc.json" />
+<meta name="search.ms_sitename" content="Docs" />
+<meta name="search.ms_docsetname" content="azure-documents" />
+<meta name="version" content="0" />
+<meta name="locale" content="en-us" />
+<meta name="site_name" content="Docs" />
+<meta name="search.ms_product" content="Azure" />
+<meta name="depot_name" content="Azure.azure-documents" />
+<meta name="updated_at" content="2018-11-02 10:03 PM" />
+<meta name="gitcommit" content="https://github.com/MicrosoftDocs/azure-docs-pr/blob/4c94fb7361c34e80cc06f1723f4841f867ed9093/articles/virtual-machines/windows/index.yml" />
+<meta name="original_content_git_url" content="https://github.com/MicrosoftDocs/azure-docs-pr/blob/live/articles/virtual-machines/windows/index.yml" />
+<meta name="document_version_independent_id" content="7afb0206-f822-ebbe-e50d-92a8d809c227" />
+<meta name="page_type" content="landingdata" />
+<meta name="toc_rel" content="toc.json" />
+<meta name="pdf_url_template" content="https://docs.microsoft.com/pdfstore/en-us/Azure.azure-documents/{branchName}{pdfName}" />
+
+	<meta name="scope" content="Azure" />
+<link href="https://docs.microsoft.com/en-us/azure/virtual-machines/windows/" rel="canonical">
+	<title>Azure Windows Virtual Machines Documentation - Tutorials, API Reference | Microsoft Docs</title>
+
+		<link rel="stylesheet" href="/_themes/docs.theme/master/en-us/_themes/styles/220fe58.site-ltr.css ">
+
+	<link rel="stylesheet" href="/_themes/docs.theme/master/en-us/_themes/styles/367f696c.landingpage.css ">
+
+	<link rel="stylesheet" href="https://azurecomcdn.azureedge.net/en-us/asset/menucss/" />
+
+	<script>
+	var msDocs = {
+		data:{
+			azureHeaderLocale: 'en-us',
+			contentLocale: 'en-us',
+			contentDir: 'ltr',
+			userLocale: 'en-us',
+			userDir: 'ltr',
+			pageTemplate: 'LandingPage',
+			brand: 'azure',
+			context: {
+
+			},
+			hasComments: false,
+			feedbackSystem: 'GitHub',
+			feedbackGitHubRepo: 'MicrosoftDocs/azure-docs',
+			feedbackProductUrl: 'https://feedback.azure.com/forums/34192--general-feedback',
+			contentGitUrl: 'https://github.com/Microsoft/azure-docs/blob/master/articles/virtual-machines/windows/index.yml'
+		},
+		functions:{},
+		settings:{
+			extendBreadcrumb: false,
+			enableUHFPPE: false
+		}
+	};
+	if (!('Promise' in window && 'resolve' in window.Promise && 'reject' in window.Promise && 'all' in window.Promise && 'race' in window.Promise)) {
+		document.write('<script src="/_themes/docs.theme/master/en-us/_themes/global/js/6ee34c01.bluebird.min.js"><\/script>');
+	}
+	if (typeof fetch !== 'function') {
+		document.write('<script src="/_themes/docs.theme/master/en-us/_themes/global/js/d9fc435c.fetch.min.js"><\/script>');
+	}
+	</script>
+
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
+	<script src="/_themes/docs.theme/master/en-us/_themes/scripts/6d6f0acb.index-docs.js"></script>
+
 <div style="width:1px;height:1px;text-indent:-10000px;overflow:hidden;">
 	<script>
 	kxLogger.logGeneric({
