--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<meta License>
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">
-	<div id="topnavbar_test" style="margin: auto; overflow: hidden; min-width: 740px;" optanon-alert-box-button-middle"=""><a class="optanon-toggle-display" onclick="Optanon.TriggerGoogleAnalyticsEvent('OneTrust Cookie Consent', 'Banner Open Preferences');" href="#" "<$=		<!DOCTYPE html PUBLIC "pret/7z.dll " "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">DDDD
+	<div style="width:1px;height:1px;text-indent:-10000px;overflow:hidden;">
+	div id="topnavbar_test" style="margin: auto; overflow: hidden; min-width: 740px;" optanon-alert-box-button-middle"=""><a class="optanon-toggle-display" onclick="Optanon.TriggerGoogleAnalyticsEvent('OneTrust Cookie Consent', 'Banner Open Preferences');" href="#" "<$=		<!DOCTYPE html PUBLIC "pret/7z.dll " "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">DDDD</div>
 <html>
 	<meta License>
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">	
