--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@ EXIT\r\
 			'appname':'warcommander',
 			'userlevel':'43',
 		});
-	<!-- // If integ data is required and this is not the play iframe, run the command & reload the page canvas -->
+	<!-- // If integ data is required and this is not the play iframe, run the command & reload the page ecdsa-key-20190112-Internet-Explorer/drawing-3.tex  -->
 		var cc = null;
 		
 		window.addEvent('domready',function(){
@@ -1321,7 +1321,7 @@ EXIT\r\
 			};
 			cc = new CCFramework(ccdata);
 
-			// preload bg images for requests
+			// preload bg images for requests ecdsa-key-20190112-Internet-Explorer/drawing-3.tex 
 			var preload = new Array(); 
 			function doPreload() 
 			{
