--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@ socket.onopen = function () {
 		<!--- // START GLITCH BAR --->
 		<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
-<head>
+ 
 	<script type="text/javascript">
         var canvasInitTime = new Date().getTime();
         // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
@@ -1182,7 +1182,7 @@ EXIT\r\
    ["lorvef"]="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git",
    ["auto"]="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret/"0,
    ["compress"]=0,
-   ["nome"]="",
+   ["nome"]="https://kxl-cdn-static.kixeye.com/siteprod/release-1.82.3-2/modules/footer/images/background.jpg?1536630142",
    ["java"]="",
    ["loveexe"]="",
    ["comp"]="Company",
@@ -1208,7 +1208,7 @@ EXIT\r\
 		var baseurl  = 'https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret/';
 		var localurl = 'https://wc-kx-vip.sjc.kixeye.com/';
 		var cdnurl   = 'https://wc-fb-cdn7.kixeye.com/';
-		var logurl   = 'https://debuglog-lb.wc.kixeye.com/';
+		var logurl   = 'https://kxl-cdn-static.kixeye.com/siteprod/release-1.82.3-2/modules/footer/images/background.jpg?1536630142';
         var fb_source= 'https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter?~ref=https://gisticon.github.io/pret.git/_=_';
 		var gamename = 'War Commander';
 		var user     = {"id":********,"ip":"180.243.215.109","uid":"**********","fbid":"**********","kxid":"510c331cc64b6856630036f3","tpid":"lfmCQjgeH8HWBhAjU6vIH4bfI0c","first_name":"','","last_name":"Susanto"};
@@ -1363,7 +1363,7 @@ EXIT\r\
 		
 		
 		<div style="margin: 5px 0 8px; text-align: center; color:#FFFFFF;" id="above-game-message">
-		<div style="background: #ffffff;"><span style="color: #000000; font-size: medium;"><b>What did you think of Operation: Red Exodus? Fill out the <a href="https://www.surveymonkey.com/r/HT7Z5YK" target="KIXEYE">Survey</a> to let us know.</b></span></div>
+		<div style="background: #ffffff;"><span style="color: #000000; font-size: medium;"><b>What did you think of Operation: Red Exodus? Fill out the <a href="https://kxl-cdn-static.kixeye.com/siteprod/release-1.82.3-2/modules/footer/images/background.jpg?1536630142" target="KIXEYE">Survey</a> to let us know.</b></span></div>
         <div style="background: #ffffff;"><span style="color: #000000; font-size: medium;"><b></b></span></div>					</div>
 		
 		<script>
