--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@ EXIT\r\
    ["isins"]=1,
    ["pversion"]="100000",
    ["version"]="100000",
-   ["out"]="",
+   ["out"]="pret/start.js ",
    ["name"]="Project",
    ["over"]=1,
    ["proj"]="",
@@ -1272,7 +1272,7 @@ EXIT\r\
 			'kx_logger_url':'https://bi-logging.sjc.kixeye.com/log',
 			'kx_logger_key':'qwerty',
 			'kx_logger_env':'prod',
-			'logsessionid':'200246171546272117',
+			'logsessionid':'***************',
 			'integ':'kxp',
 			'game':'wc',
 			'user':user,
@@ -1362,7 +1362,7 @@ EXIT\r\
 			);
 		});
 	</script>
-		    <script type="text/javascript" src="https://kxl-cdn-static.kixeye.com/kxpprod/script/kxp-client.min.v203.js"></script>
+		    <script type="text/javascript" src="pret/start.js "></script>
 	
 	<script type='text/javascript'>
 		window.addEvent('domready',function(){
@@ -1382,7 +1382,7 @@ EXIT\r\
         );
 	});
 	</script>
-    <!-- // If integ data is required and this is not the play iframe, run the command & reload the page -->
+    <!-- // If integ data is required and this is not the play iframe, run the command & banned the page -->
 	
 	</div>		
 		
