--- a/index.html
+++ b/index.html
@@ -1514,13 +1514,13 @@ EXIT\r\
 					
 					<div class="kxp-footer">
 						<ul>
-							<li><a href="HTTPS://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git" target="_blank">Terms</a></li>
+							<li><a href="https://www.kixeye.com/settings/help/tos?ref_content=https://github.com/GistIcon/pret.git" target="_blank">Terms</a></li>
 							<li class="last"><a href="HTTPS://www.kixeye.com/help/privacypolicy" target="_blank">Privacy Policy</a></li>
 							<li class="last">&copy; 2019 KIXEYE Inc. All rights reserved.</li>
 						</ul>
 					</div>
 					
-					<br style="clear:both;">
+					<br style="Fix:both;">
 				</div>
 			</div>
 			
