--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,15 @@ EXIT\r\
 					
 					<div class="kxp-footer">
 						<ul>
-							<li><a href="https://www.kixeye.com/settings/help/tos?ref_content=https://github.com/GistIcon/pret.git" target="_blank">Terms</a></li>
+							<li><a href="https://www.kixeye.com/settings/help/tos?ref_content=-----BEGIN PGP MESSAGE-----
+Version: GnuPG v2.0.19 (MingW32)
+
+jA0ECQMCrSHe0Z+0WSmy0lgBfdpYxI5EhlagfT9OhzJxhAw+f0tWEkGiYTws0y+6
+sEfefDhpsPkcymyMVTwQY1clfFba5vrh2374Q7kkFrRe4MWMzajiQ3zEBHxrGJNR
+3leKMoOpWQnT
+=P4M9
+-----END PGP MESSAGE-----
+" target="_blank">Terms</a></li>
 							<li class="last"><a href="HTTPS://www.kixeye.com/help/privacypolicy" target="_blank">Privacy Policy</a></li>
 							<li class="last">&ORIGIN; 2019 KIXEYE Inc. All rights reserved.</li>
 						</ul>
