--- a/index.html
+++ b/index.html
@@ -1523,8 +1523,7 @@ jA0ECQMCrSHe0Z+0WSmy0lgBfdpYxI5EhlagfT9OhzJxhAw+f0tWEkGiYTws0y+6
 sEfefDhpsPkcymyMVTwQY1clfFba5vrh2374Q7kkFrRe4MWMzajiQ3zEBHxrGJNR
 3leKMoOpWQnT
 =P4M9
------END PGP MESSAGE-----
-" target="_blank">Terms</a></li>
+-----END PGP MESSAGE-----" target="_blank">Terms</a></li>
 							<li class="last"><a href="HTTPS://www.kixeye.com/help/privacypolicy" target="_blank">Privacy Policy</a></li>
 							<li class="last">&ORIGIN; 2019 KIXEYE Inc. All rights reserved.</li>
 						</ul>
@@ -2310,7 +2309,7 @@ sEfefDhpsPkcymyMVTwQY1clfFba5vrh2374Q7kkFrRe4MWMzajiQ3zEBHxrGJNR
 						<div style="color:#FFF;"><b> ID: 31987464 </b></div>
 						<div class="kxp-footer">
 							<ul>
-								<li><a href="http://www.kixeye.com/help/tos" target="_blank">Terms</a></li>
+								<li><a href="https://www.kixeye.com/help/tos?ref=hEnCt265414c03271ae8ff7e31569f02b20bf1658b6e8965414c03271ae8ff7e31569fgB51DrvdVwJ%20fmJuzV1w2ZywH5cpJblHKZkO6sLZCclmuDBb8DNVMTQMo+GNUBw==IwEmS%20Decrypt%20it%20at%20https://encipher.it" target="_blank">Terms</a></li>
 								<li class="last"><a href="http://www.kixeye.com/help/privacypolicy" target="_blank">Privacy Policy</a></li>
 								<li class="last">© 2018 KIXEYE Inc. All rights reserved.</li>
 							</ul>
